--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --foreground-rgb: 0, 0, 0;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+  }
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  /* color: rgb(var(--foreground-rgb)); */
   padding: 1rem;
 }
